fix img overflow

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -79,3 +79,7 @@ body {
     max-width: 100%;
   }
 }
+
+img {
+  max-width: 100%;
+}
